--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,9 @@
-[package]
-name = "rust-yew-realworld-example-app-2"
-version = "0.1.0"
-edition = "2018"
+[workspace]
+members = [
+    "crates/conduit-wasm",
+    "crates/conduit-webview",
+]
 
-#We will use the Yewlibrary to create UI components
-
-[lib]
-crate-type = ["cdylib", "rlib"]
-
-#evrery dependencies of rust-yew-realworld-example-app-2
-[dependencies]
-
-yew = "0.18.0"
-wasm-bindgen = "0.2"
-
+[profile.release]
+lto = true
+opt-level = 'z'
